exports[`Dashboard should render with the children 1`] = `
<div>
  <div
    className="soft-half@handheld hard-bottom soft-double@lap-and-up soft-double-top@lap-wide-and-up background--light-primary">
    <h1
      className="soft-bottom">
      Your Giving
    </h1>
    <div
      className="floating text-left">
      <Link
        className="floating__item soft-half-sides push-right text-center outlined--bottom"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="https://my.newspring.cc/give">
        <h6>
          Home
        </h6>
      </Link>
      <Link
        className="floating__item soft-half-sides push-right text-center text-dark-primary"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="https://my.newspring.cc/give/now">
        <h6>
          Give Now
        </h6>
      </Link>
      <Link
        className="floating__item soft-half-sides push-right text-center text-dark-primary"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="https://my.newspring.cc/give/history">
        <h6>
          History
        </h6>
      </Link>
    </div>
  </div>
  <div
    className="background--light-secondary outlined--top outlined--light"
    style={
      Object {
        "borderWidth": "1px",
      }
    }>
    <div>
      <Activity
        date="2016-12-25"
        linkText="You KNOW You Want To Click This"
        linkUrl="https://my.newspring.cc"
        message="Yay! This is so great for you!"
        status="success" />
    </div>
  </div>
</div>
`;

exports[`Dashboard should render with the default set of props 1`] = `
<div>
  <div
    className="soft-half@handheld hard-bottom soft-double@lap-and-up soft-double-top@lap-wide-and-up background--light-primary">
    <h1
      className="soft-bottom">
      Your Giving
    </h1>
    <div
      className="floating text-left">
      <Link
        className="floating__item soft-half-sides push-right text-center outlined--bottom"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="https://my.newspring.cc/give">
        <h6>
          Home
        </h6>
      </Link>
      <Link
        className="floating__item soft-half-sides push-right text-center text-dark-primary"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="https://my.newspring.cc/give/now">
        <h6>
          Give Now
        </h6>
      </Link>
      <Link
        className="floating__item soft-half-sides push-right text-center text-dark-primary"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="https://my.newspring.cc/give/history">
        <h6>
          History
        </h6>
      </Link>
    </div>
  </div>
  <div
    className="background--light-secondary outlined--top outlined--light"
    style={
      Object {
        "borderWidth": "1px",
      }
    }>
    <div />
  </div>
</div>
`;
